# routes/api.php
@@ -27,6 +27,7 @@ Route::prefix('v1')->group(function () {
     Route::get('/dashboard/customer-growth', [DashboardController::class, 'customerGrowth']);
     Route::get('/dashboard/notifications',[DashboardController::class, 'notifications']);
     Route::get('/dashboard/guide',[DashboardController::class, 'guide']);
+    Route::get('/dashboard/quick-links', [DashboardController::class, 'quickLinks']);
 
     Route::middleware(['api.logger'])->prefix('notifications')->group(function () {
         Route::get('/', [NotificationController::class, 'index']);
